@@ -190,6 +190,7 @@ because of Phabricator reports.
 * CdnCacheUpdate::newFromTitles(), deprecated since 1.35, has been removed.
 * HtmlFileCacheUpdate::newFromTitles(), deprecated since 1.37, has been
   removed.
+* DifferenceEngine::textDiff(), deprecated since 1.32, has been removed.
 * …
 
 === Deprecations in 1.40 ===
